@@ -1,6 +1,9 @@
 Revision history for DBD::Oracle
 
 Changes in DBD-Oracle 1.29_2
+ [ENHANCEMENTS]
+ - Makefile.PL's options are now documented
+
  [BUG FIXES]
  - support development release versions in GetInfo (Martin J. Evans)
  - don't gag diag() on the tests by default
